manifest/sample/gatway-sample.yml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: gateway-01
  namespace: test-infra
  annotations:
    alb.networking.azure.io/alb-id: "/subscriptions/df2f960a-8e92-40ec-a2b8-0a2923d3c074/resourcegroups/appgw-rg/providers/Microsoft.ServiceNetworking/trafficControllers/alb-poc"
spec:
  gatewayClassName: azure-alb-external
  listeners:
  - name: http
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: Same
  addresses:
  - type: alb.networking.azure.io/alb-frontend
    value: frontend-poc
